# image_processing_paper

./: .gitignore  CMakeLists.txt  install_mingw_cmake_opencv_boost.txt  radio_experiment_report.csv  report.csv
include/: ahe_transformation.h  bilinear_interpolation.h  circle_interpolation.h  circle_rectangulation.h  clahe_transformation.h  common.h  contrast_improvement_ratio.h  evaluator.h  grid_rectangulation.h  histogram_spread.h  image_streamer.h  interpolation_scheme.h  mean_squared_error.h  metric.h  normalized_mean_squared_error.h  optimizable.h  optimizator.h  random_number_generator.h  rectangulation.h  simple_interpolator.h  simple_transformation.h  transformation.h  tree_rectangulation.h  tree_rectangulation_zero.h
src/: ahe_transformation.cc  bilinear_interpolation.cc  circle_interpolation.cc  circle_rectangulation.cc  clahe_experiment.cc  clahe_transformation.cc  compile  contrast_improvement_ratio.cc  grid_rectangulation.cc  histogram_spread.cc  image_streamer.cc  interpolation_scheme.cc  main.cc  mean_squared_error.cc  metric.cc  normalized_mean_squared_error.cc  optimizable.cc  optimization_experiment.cc  optimizator.cc  radio_experiment.cc  random_number_generator.cc  rectangulation.cc  simple_interpolator.cc  simple_transformation.cc  tr_test.cc  transformation.cc  tree_rectangulation.cc  tree_rectangulation_zero.cc  trz_test.cc
